# aria

./: .gitignore  CMakeLists.txt
include/: compiler.h  generate.h  lexer.h  opcode.h  parse.h  parser.h  reader.h  runner.h  stack.h  token.h  util.h  vm.h  writer.h
src/: compiler.c  generate.c  lexer.c  main.c  opcode.c  parse.c  parser.c  reader.c  runner.c  stack.c  util.c  vm.c  writer.c
